2014-03-25  Julien Bect  <julien.bect@supelec.fr>

	stk_config_getroot: Simpler is better.

	* config/stk_config_getroot.m: Simplify the way we locate STK's
	root. Use stk_param_relik instead of stk_test as a reference, as
	stk_test will probably not be included in the Octave package.
	* admin/make_octave_package.m: Modified.

	stk_make_htmldoc: Remove dependency on stk_config_getroot.

	* admin/stk_make_htmldoc.m: modified.

	stk_param_relik: Improved implementation, or so I hope.

	* paramestim/stk_param_relik.m: Several modifications, that seem
	to reduce the number of warnings related to bad conditioning, and
	also improve the performance for large n (about 1000, say).

	Fix minor problems in stk_config_rmpath and stk_config_path.

	* config/stk_config_path.m: modified
	* config/stk_config_rmpath.m: modified

	Test examples using stk_runtests instead of stk_runexamples.

	* examples/01_kriging_basics/stk_example_kb01.m: add %!test
	* examples/01_kriging_basics/stk_example_kb02.m: add %!test
	* examples/01_kriging_basics/stk_example_kb03.m: add %!test
	* examples/01_kriging_basics/stk_example_kb04.m: add %!test
	* examples/01_kriging_basics/stk_example_kb05.m: add %!test
	* examples/01_kriging_basics/stk_example_kb06.m: add %!test
	* examples/01_kriging_basics/stk_example_kb07.m: add %!test
	* examples/02_design_of_experiments/stk_example_doe01.m: add %!test
	* examples/02_design_of_experiments/stk_example_doe02.m: add %!test
	* examples/02_design_of_experiments/stk_example_doe03.m: add %!test
	* examples/03_miscellaneous/stk_example_misc01.m: add %!test
	* examples/03_miscellaneous/stk_example_misc02.m: add %!test
	* misc/test/stk_runexamples.m: removed
	* misc/test/stk_runscript.m: removed

2014-03-23  Julien Bect  <julien.bect@supelec.fr>

	Remove stk_init.m from the Octave package.

	* admin/make_octave_package.m: Create PKG_ADD.m (later renamed to
	PKG_ADD) by renaming stk_init. Therefore, we don't need the
	existing PKG_ADD.m anymore.