@@ -1,8 +1,8 @@
-% STK_VERSION returns STK's version number, as defined in README.
+% STK_VERSION returns STK's version number.
 
 % Copyright Notice
 %
-%    Copyright (C) 2013 SUPELEC
+%    Copyright (C) 2013, 2014 SUPELEC
 %
 %    Author:  Julien Bect  <julien.bect@supelec.fr>
 
@@ -28,41 +28,6 @@
 
 function v = stk_version ()
 
-persistent version_number
-
-if isempty (version_number)
-    
-    % open README
-    filename = fullfile (stk_config_getroot (), 'README');
-    fid = fopen (filename, 'rt');
-    if fid == -1,
-        stk_error ('Unable to open the README file.', 'FOpenFailed');
-    end
-    
-    % what we're looking for
-    t = 'Version: ';
-    
-    while 1
-        
-        % read a new line
-        s = fgetl (fid);
-        if s == -1,
-            fclose (fid);
-            stk_error ('Unable to read STK''s version number.', 'Unexpected');
-        end
-        
-        % look for the pattern
-        i = strfind (s, t);
-        if ~isempty (i)
-            version_number = strtrim (s((i + length(t)):end));
-            fclose (fid);
-            break
-        end
-        
-    end
-        
-end
-
-v = version_number;
+v = '2.2-dev';
 
 end % function stk_version
